--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/three": "^0.165.0",
+    "three": "^0.165.0",
     "typescript": "^5.2.2",
     "vite": "^5.3.1"
+  },
+  "dependencies": {
+    "eslint": "^9.5.0",
+    "prettier": "^3.3.2"
   }
 }
